updated footer and config

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,7 +19,7 @@
 		</div>
 		<div class="col-sm-4">
 		  Contact:<br />
-		  [ROOM NO ?? ], ICICS/CS Building, University of British Columbia<br />
+		  X212, ICICS/CS Building, University of British Columbia<br />
 		  201-2366 Main Mall<br />
 		  Vancouver, B.C. V6T 1Z4<br />
 		  Canada <br />
